--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
-		<script src="//res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
-
+    <script src="//res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
+    <script src="https://unpkg.com/vconsole/dist/vconsole.min.js"></script>
   </body>
 </html>
